--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -2,8 +2,7 @@
 
 <h1>Welcome</h1>
 
-{{userID}} {{userName}}
-{% if userID %}
+{{userID}} {{userName}} {% if userID %}
 
 <a href="/logout">Logout</a>
 {% else %}
