--- a/App/Views/button.html
+++ b/App/Views/button.html
@@ -1,20 +1,5 @@
 <button
-  class="
-    bg-transparent
-    hover:bg-blue-900
-    mx-5
-    my-2
-    text-blue-900
-    font-semibold
-    hover:text-white
-    py-2
-    px-4
-    border border-blue-900
-    hover:border-transparent
-    rounded
-    float-right
-    text-xl
-  "
+  class="bg-transparent hover:bg-blue-900 mx-5 my-2 text-blue-900 font-semibold hover:text-white py-2 px-4 border border-blue-900 hover:border-transparent rounded float-right text-xl"
   type="{{type}}"
 >
   {{text}}
