--- a/App/Views/table.html
+++ b/App/Views/table.html
@@ -2,15 +2,7 @@
   <div class="col-span-12">
     <div class="overflow-auto lg:overflow-visible">
       <table
-        class="
-          table
-          lg:h-full lg-80vw
-          text-gray-400
-          border-separate
-          space-y-6
-          text-sm
-          border-collapse border-2 border-double border-blue-300
-        "
+        class="table lg:h-full lg-80vw text-gray-400 border-separate space-y-6 text-sm border-collapse border-2 border-double border-blue-300"
       >
         <thead class="bg-blue-900 text-white">
           <tr>
