--- a/App/Views/Admin/Dashboard/Semester/new.html
+++ b/App/Views/Admin/Dashboard/Semester/new.html
@@ -1,9 +1,15 @@
 {% extends "base.html" %} {% block body %}
-<form action="/admin/createSemester" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 m-6" method="post">
-    <div class="input-field">
-        <label for="name">Semester Name</label>
-        <input type="text" id="name" name="name" />
-    </div>
-    <button class="bg-blue-900 hover:bg-blue-700 text-white py-2 px-4 rounded">Create</button>
+<form
+  action="/admin/createSemester"
+  class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 m-6"
+  method="post"
+>
+  <div class="input-field">
+    <label for="name">Semester Name</label>
+    <input type="text" id="name" name="name" />
+  </div>
+  <button class="bg-blue-900 hover:bg-blue-700 text-white py-2 px-4 rounded">
+    Create
+  </button>
 </form>
 {% endblock %}
