--- a/App/Views/Admin/Dashboard/index.html
+++ b/App/Views/Admin/Dashboard/index.html
@@ -1,4 +1,2 @@
-{% extends "base.html" %}
-{% block title %}Admin | Dashboard{% endblock %} {%
-block body %}
-{% endblock %}
+{% extends "base.html" %} {% block title %}Admin | Dashboard{% endblock %} {%
+block body %} {% endblock %}
