--- a/App/Views/Student/Dashboard/index.html
+++ b/App/Views/Student/Dashboard/index.html
@@ -1,3 +1,2 @@
 {% extends "base.html" %} {% block title %}Student | Dashboard{% endblock %} {%
-block body %}
-{% endblock %}
+block body %} {% endblock %}
