--- a/App/Views/Teacher/Dashboard/index.html
+++ b/App/Views/Teacher/Dashboard/index.html
@@ -1,4 +1,2 @@
-{% extends "base.html" %}
-{% block title %}Teacher | Dashboard{% endblock %}
-{% block body %}
-{% endblock %}
+{% extends "base.html" %} {% block title %}Teacher | Dashboard{% endblock %} {%
+block body %} {% endblock %}
