--- a/App/Views/education.html
+++ b/App/Views/education.html
@@ -1,93 +1,112 @@
 <div class="bg-white p-3 shadow-sm rounded-sm">
-    <div class="grid grid-cols-2">
-        <div>
-            <div>
-                <div class="flex items-center space-x-2 font-semibold text-gray-900 leading-8 mb-3">
-                    <span clas="text-green-500">
-                        <svg class="h-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                            stroke="currentColor">
-                            <path fill="#fff" d="M12 14l9-5-9-5-9 5 9 5z" />
-                            <path fill="#fff"
-                                d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z" />
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222" />
-                        </svg>
-                    </span>
-                    <span class="tracking-wide">Current Education</span>
-                </div>
-                <div class="grid md:grid-cols-2 text-sm">
-
-                    <div class="grid grid-cols-2">
-                        <div class="px-4 py-2 font-semibold">Course</div>
-                        <div class="px-4 py-2">{{student.courseName|ucf}}</div>
-                    </div>
-                    <div class="grid grid-cols-2">
-                        <div class="px-4 py-2 font-semibold">Duration</div>
-                        <div class="px-4 py-2">{{student.courseDuration}}</div>
-                    </div>
-                    <div class="grid grid-cols-2">
-                        <div class="px-4 py-2 font-semibold">Batch</div>
-                        <div class="px-4 py-2">{{student.batchCode}}</div>
-                    </div>
-                    <div class="grid grid-cols-2">
-                        <div class="px-4 py-2 font-semibold">Semester</div>
-                        <div class="px-4 py-2">{{student.semester}}</div>
-                    </div>
-                    <div class="grid grid-cols-2">
-                        <div class="px-4 py-2 font-semibold">Section</div>
-                        <div class="px-4 py-2">{{student.section|ucf}}</div>
-                    </div>
-                    <div class="grid grid-cols-2">
-                        <div class="px-4 py-2 font-semibold">Branch Name</div>
-                        <div class="px-4 py-2">{{student.branchName}}</div>
-                    </div>
-                </div>
-            </div>
+  <div class="grid grid-cols-2">
+    <div>
+      <div>
+        <div
+          class="flex items-center space-x-2 font-semibold text-gray-900 leading-8 mb-3"
+        >
+          <span clas="text-green-500">
+            <svg
+              class="h-5"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path fill="#fff" d="M12 14l9-5-9-5-9 5 9 5z" />
+              <path
+                fill="#fff"
+                d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z"
+              />
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
+              />
+            </svg>
+          </span>
+          <span class="tracking-wide">Current Education</span>
         </div>
+        <div class="grid md:grid-cols-2 text-sm">
+          <div class="grid grid-cols-2">
+            <div class="px-4 py-2 font-semibold">Course</div>
+            <div class="px-4 py-2">{{student.courseName|ucf}}</div>
+          </div>
+          <div class="grid grid-cols-2">
+            <div class="px-4 py-2 font-semibold">Duration</div>
+            <div class="px-4 py-2">{{student.courseDuration}}</div>
+          </div>
+          <div class="grid grid-cols-2">
+            <div class="px-4 py-2 font-semibold">Batch</div>
+            <div class="px-4 py-2">{{student.batchCode}}</div>
+          </div>
+          <div class="grid grid-cols-2">
+            <div class="px-4 py-2 font-semibold">Semester</div>
+            <div class="px-4 py-2">{{student.semester}}</div>
+          </div>
+          <div class="grid grid-cols-2">
+            <div class="px-4 py-2 font-semibold">Section</div>
+            <div class="px-4 py-2">{{student.section|ucf}}</div>
+          </div>
+          <div class="grid grid-cols-2">
+            <div class="px-4 py-2 font-semibold">Branch Name</div>
+            <div class="px-4 py-2">{{student.branchName}}</div>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
 
 <div class="bg-white p-3 shadow-sm rounded-sm">
-
-    <div class="grid grid-cols-2">
-        <div>
-            <div>
-                <div class="flex items-center space-x-2 font-semibold text-gray-900 leading-8 mb-3">
-                    <span clas="text-green-500">
-                        <svg class="h-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                            stroke="currentColor">
-                            <path fill="#fff" d="M12 14l9-5-9-5-9 5 9 5z" />
-                            <path fill="#fff"
-                                d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z" />
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222" />
-                        </svg>
-                    </span>
-                    <span class="tracking-wide">Previous Education</span>
-                </div>
-                <div>
-                    {% if educationdetails|length %}
-                    {% for education in educationdetails %}
-                    <div>
-                        <div class="px-4 py-2 font-semibold">{{education.school}}
-                        </div>
-                        <div class="px-4 py-2">
-                            {{education.field|ucf}}
-                            <br>
-                            {{education.fromDate|formatDate}} - {{education.toDate|formatDate}}
-                        </div>
-
-                    </div>
-                    {% endfor %}
-                    {% else %}
-
-                    <div class="px-4 py-2">
-                        No results for previous education.
-                    </div>
-                    {% endif %}
-
-                </div>
-            </div>
+  <div class="grid grid-cols-2">
+    <div>
+      <div>
+        <div
+          class="flex items-center space-x-2 font-semibold text-gray-900 leading-8 mb-3"
+        >
+          <span clas="text-green-500">
+            <svg
+              class="h-5"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path fill="#fff" d="M12 14l9-5-9-5-9 5 9 5z" />
+              <path
+                fill="#fff"
+                d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z"
+              />
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
+              />
+            </svg>
+          </span>
+          <span class="tracking-wide">Previous Education</span>
         </div>
+        <div>
+          {% if educationdetails|length %} {% for education in educationdetails
+          %}
+          <div>
+            <div class="px-4 py-2 font-semibold">{{education.school}}</div>
+            <div class="px-4 py-2">
+              {{education.field|ucf}}
+              <br />
+              {{education.fromDate|formatDate}} -
+              {{education.toDate|formatDate}}
+            </div>
+          </div>
+          {% endfor %} {% else %}
+
+          <div class="px-4 py-2">No results for previous education.</div>
+          {% endif %}
+        </div>
+      </div>
     </div>
+  </div>
 </div>
