--- a/App/Views/project.html
+++ b/App/Views/project.html
@@ -1,35 +1,32 @@
 <div class="bg-white p-3 shadow-sm rounded-sm">
-    <div class="grid grid-cols-2">
-        <div>
-            <div>
-                <div class="flex items-center space-x-2 font-semibold text-gray-900 leading-8 mb-3">
-                    <span clas="text-green-500">
-                        <i class="fas fa-project-diagram"></i>
-                    </span>
-                    <span class="tracking-wide">Projects and works</span>
-                </div>
-                {% if projects|length %}
-                {% for project in projects %}
-                <div>
-                    <div>
-                        <div class="px-4 py-2 font-semibold">{{project.title|ucf}}</div>
-                    </div>
-                    <div class="px-4 py-2">
-                        {{project.description|ucf}}
-                        <br>
-                        {{project.fromDate|formatDate}} - {{project.toDate|formatDate}}
-                        <br>
-                        <a href="{{project.link}}">{{project.link}}</a>
-                    </div>
-                </div>
-                {% endfor %}
-                {% else %}
-                <div class="px-4 py-2">
-                    No projects yet
-                </div>
-                {% endif %}
-
-            </div>
+  <div class="grid grid-cols-2">
+    <div>
+      <div>
+        <div
+          class="flex items-center space-x-2 font-semibold text-gray-900 leading-8 mb-3"
+        >
+          <span clas="text-green-500">
+            <i class="fas fa-project-diagram"></i>
+          </span>
+          <span class="tracking-wide">Projects and works</span>
         </div>
+        {% if projects|length %} {% for project in projects %}
+        <div>
+          <div>
+            <div class="px-4 py-2 font-semibold">{{project.title|ucf}}</div>
+          </div>
+          <div class="px-4 py-2">
+            {{project.description|ucf}}
+            <br />
+            {{project.fromDate|formatDate}} - {{project.toDate|formatDate}}
+            <br />
+            <a href="{{project.link}}">{{project.link}}</a>
+          </div>
+        </div>
+        {% endfor %} {% else %}
+        <div class="px-4 py-2">No projects yet</div>
+        {% endif %}
+      </div>
     </div>
+  </div>
 </div>
