--- a/App/Views/Admin/Dashboard/profile.html
+++ b/App/Views/Admin/Dashboard/profile.html
@@ -1,26 +1,14 @@
-{%extends "base.html"%}{%block body%}
+{%extends "base.html"%} {% block title %}Admin | Profile{% endblock %} {%block body%}
 <div class="bg-gray-100">
   <div class="container mx-auto my-5 p-5">
     <div class="md:flex no-wrap md:-mx-2">
       <div class="w-full md:w-9/12 mx-2 h-64">
         <div class="bg-white p-3 shadow-sm rounded-sm">
-          <div
-            class="flex items-center space-x-2 font-semibold text-gray-900 leading-8"
-          >
+          <div class="flex items-center space-x-2 font-semibold text-gray-900 leading-8">
             <span clas="text-green-500">
-              <svg
-                class="h-5"
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
-                />
+              <svg class="h-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
               </svg>
             </span>
             <span class="tracking-wide">About</span>
