created profile test for all users

--- a/App/Views/Teacher/Dashboard/profile.html
+++ b/App/Views/Teacher/Dashboard/profile.html
@@ -1,4 +1,4 @@
-{%extends "base.html"%}{%block body%}
+{%extends "base.html"%}{%block body%}{% block title %}Teacher | Profile{% endblock %}
 <div class="bg-gray-100">
   <div class="container mx-auto my-5 p-5">
     <div class="md:flex no-wrap md:-mx-2">
