--- a/App/Views/Admin/Dashboard/Department/edit.html
+++ b/App/Views/Admin/Dashboard/Department/edit.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %}Admin | Department{% endblock %} {%
+{% extends "base.html" %} {% block title %}Update | Department{% endblock %} {%
 block body %}
 <form action="/admin/updateDepartment" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 m-6" method="post">
   <div class="input-field">
