--- a/App/Views/Student/Dashboard/Settings/index.html
+++ b/App/Views/Student/Dashboard/Settings/index.html
@@ -1,4 +1,4 @@
-{%extends "base.html"%} {% block title %}Admin | Settings |{% endblock %} {%block body%}
+{%extends "base.html"%} {% block title %}Student | Settings {% endblock %} {%block body%}
 <div class="bg-gray-100">
     <div class="container mx-auto my-5 p-5">
         <div class="md:flex no-wrap md:-mx-2">
@@ -7,7 +7,7 @@
                     <div class="text-gray-700">
                         <div class="grid md:grid-cols-2 text-sm">
                             <div class="grid grid-cols-2">
-                                <a href="/admin/settings/changePassword">
+                                <a href="/student/settings/changePassword">
                                     Change Password
                                 </a>
                             </div>
