added active menu for settings

--- a/App/Views/password.html
+++ b/App/Views/password.html
@@ -9,15 +9,15 @@
             <input type="hidden" name="remember" value="true" />
             <div class="rounded-md shadow-sm -space-y-px">
                 <div>
-                    <input id="password" name="oldPassword" type="password" placeholder="old password" required
+                    <input id="password" name="oldPassword" type="password" placeholder="Old password" required
                         class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" />
                 </div>
                 <div>
-                    <input id="password" name="newPassword" type="password" placeholder="new password" required
+                    <input id="password" name="newPassword" type="password" placeholder="New password" required
                         class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" />
                 </div>
                 <div>
-                    <input id="password" name="confirmPassword" type="password" placeholder="confirm password" required
+                    <input id="password" name="confirmPassword" type="password" placeholder="Confirm New password" required
                         class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" />
                 </div>
             </div>
